--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -14,7 +14,7 @@ FTP 即 File Transfer Protocol（文件传输协议）。使用 FTP 服务搭建
 
 ```sh
 # cd /usr/ports/ftp/pure-ftpd
-# make config
+# make config-recursive
 ```
 
 选中 `MYSQL`，其余保持默认选项回车即可：
@@ -22,7 +22,7 @@ FTP 即 File Transfer Protocol（文件传输协议）。使用 FTP 服务搭建
 ![](../.gitbook/assets/PureFTPD.png)
 
 ```sh
-# make BATCH=yes install clean
+# make install clean
 ```
 
 ### 配置 `/usr/local/etc/pure-ftpd.conf` 文件
