更新 di-16.1-jie-ftp-fu-

--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -246,14 +246,18 @@ MYSQLGetDir     SELECT Dir FROM users WHERE User='\L'
 
 ### 添加 ftp 组和用户
 
+- 添加用户 ftpuser
+
 ```sh
-# pure-pw useradd ftpuser2 -u 2001 -g 2001 -d /home/ftpusers2/
+# pure-pw useradd ftpuser -u 2001 -g 2001 -d /home/ftpusers2/
 Password:
 Enter it again:
 # pure-pw mkdb
 # pure-pw list
 ftpuser             /home/ftpusers/./
 ```
+
+- 打印用户信息
 
 ```sh
 root@ykla:/ # pure-pw show ftpuser
