--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -246,10 +246,10 @@ MYSQLGetDir     SELECT Dir FROM users WHERE User='\L'
 
 ### 添加 ftp 组和用户
 
-- 添加用户 ftpuser
+- 添加虚拟用户 ftpuser
 
 ```sh
-# pure-pw useradd ftpuser -u 2001 -g 2001 -d /home/ftpusers2/
+# pure-pw useradd ftpuser -u 2001 -g 2001 -d /home/ftpusers/ -m
 Password:
 Enter it again:
 # pure-pw mkdb
