--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -79,23 +79,21 @@ create database pureftpd;
 use pureftpd;
 DROP TABLE IF EXISTS `users`;
 CREATE TABLE `users` (
-   `User` varchar(255) CHARACTER SET utf8mb4 COLLATE utf8mb4_bin NOT NULL,
-   `Password` varchar(255) CHARACTER SET utf8mb4 COLLATE utf8mb4_bin NOT NULL,
-   `Uid` int(11) NOT NULL DEFAULT -1 COMMENT '用户 ID',
-   `Gid` int(11) NOT NULL DEFAULT -1 COMMENT '用户组 ID',
-   `Dir` varchar(255) CHARACTER SET utf8mb4 COLLATE utf8mb4_bin NOT NULL,
-   `quotafiles` int(255) NULL DEFAULT 500,
-   `quotasize` int(255) NULL DEFAULT 30,
-   `ulbandwidth` int(255) NULL DEFAULT 80,
-   `dlbandwidth` int(255) NULL DEFAULT 80,
-   `ipaddress` varchar(255) CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci NULL DEFAULT'*',
-   `comment` int(255) NULL DEFAULT NULL,
-   `status` tinyint(4) NULL DEFAULT 1,
-   `ulratio` int(255) NULL DEFAULT 1,
-   `dlratio` int(255) NULL DEFAULT 1,
-   PRIMARY KEY (`User`) USING BTREE
-) ENGINE = InnoDB CHARACTER SET = utf8mb4 COLLATE = utf8mb4_general_ci ROW_FORMAT = Dynamic;
-INSERT INTO `users` VALUES ('demo', 'demo&2022*', 2002, 2000, '/home/ftpusers', 500, 30, 80, 80, '*', NULL, NULL, 1, 1);
+  `User` varchar(16) NOT NULL DEFAULT '',
+  `status` enum('0','1') NOT NULL DEFAULT '0',
+  `Password` varchar(64) NOT NULL DEFAULT '',
+  `Uid` varchar(11) NOT NULL DEFAULT '-1',
+  `Gid` varchar(11) NOT NULL DEFAULT '-1',
+  `Dir` varchar(128) NOT NULL DEFAULT '',
+  `ULBandwidth` smallint(5) NOT NULL DEFAULT '0',
+  `DLBandwidth` smallint(5) NOT NULL DEFAULT '0',
+  `comment` tinytext NOT NULL,
+  `ipaccess` varchar(15) NOT NULL DEFAULT '*',
+  `QuotaSize` smallint(5) NOT NULL DEFAULT '0',
+  `QuotaFiles` int(11) NOT NULL DEFAULT '0',
+  PRIMARY KEY (`User`),
+  UNIQUE KEY `User` (`User`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8;
 ```
 
 #### 创建登录数据库用户及设置密码
@@ -159,7 +157,7 @@ MYSQLDatabase   pureftpd
 # Mandatory : how passwords are stored
 # Valid values are : "cleartext", "argon2", "scrypt", "crypt", and "any"
 
-MYSQLCrypt      crypt
+MYSQLCrypt      md5
 
 
 # In the following directives, parts of the strings are replaced at
@@ -206,20 +204,20 @@ MYSQLGetDir     SELECT Dir FROM users WHERE User='\L'
 # Optional : query to get the maximal number of files 
 # Pure-FTPd must have been compiled with virtual quotas support.
 
-# MySQLGetQTAFS  SELECT QuotaFiles FROM users WHERE User='\L'
+MySQLGetQTAFS  SELECT QuotaFiles FROM users WHERE User='\L'
 
 
 # Optional : query to get the maximal disk usage (virtual quotas)
 # The number should be in Megabytes.
 # Pure-FTPd must have been compiled with virtual quotas support.
 
-# MySQLGetQTASZ  SELECT QuotaSize FROM users WHERE User='\L'
+MySQLGetQTASZ  SELECT QuotaSize FROM users WHERE User='\L'
 
 
 # Optional : ratios. The server has to be compiled with ratio support.
 
 # MySQLGetRatioUL SELECT ULRatio FROM users WHERE User='\L'
-# MySQLGetRatioDL SELECT DLRatio FROM users WHERE User='\L'
+MySQLGetRatioDL SELECT DLRatio FROM users WHERE User='\L'
 
 
 # Optional : bandwidth throttling.
@@ -227,7 +225,7 @@ MYSQLGetDir     SELECT Dir FROM users WHERE User='\L'
 # Values are in KB/s .
 
 # MySQLGetBandwidthUL SELECT ULBandwidth FROM users WHERE User='\L'
-# MySQLGetBandwidthDL SELECT DLBandwidth FROM users WHERE User='\L'
+MySQLGetBandwidthDL SELECT DLBandwidth FROM users WHERE User='\L'
 
 
 # Enable ~ expansion. NEVER ENABLE THIS BLINDLY UNLESS :
@@ -249,7 +247,7 @@ MYSQLGetDir     SELECT Dir FROM users WHERE User='\L'
 - 添加虚拟用户 ftpuser
 
 ```sh
-# pure-pw useradd ftpuser -u 2001 -g 2001 -d /home/ftpusers/ -m
+# pure-pw useradd ftpuser -u 2000 -g 2000 -d /home/ftpusers/ -m
 Password:
 Enter it again:
 # pure-pw mkdb
