--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -79,21 +79,22 @@ create database pureftpd;
 use pureftpd;
 DROP TABLE IF EXISTS `users`;
 CREATE TABLE `users` (
-  `User` varchar(16) NOT NULL DEFAULT '',
-  `status` enum('0','1') NOT NULL DEFAULT '0',
-  `Password` varchar(64) NOT NULL DEFAULT '',
-  `Uid` varchar(11) NOT NULL DEFAULT '-1',
-  `Gid` varchar(11) NOT NULL DEFAULT '-1',
-  `Dir` varchar(128) NOT NULL DEFAULT '',
-  `ULBandwidth` smallint(5) NOT NULL DEFAULT '0',
-  `DLBandwidth` smallint(5) NOT NULL DEFAULT '0',
-  `comment` tinytext NOT NULL,
-  `ipaccess` varchar(15) NOT NULL DEFAULT '*',
-  `QuotaSize` smallint(5) NOT NULL DEFAULT '0',
-  `QuotaFiles` int(11) NOT NULL DEFAULT '0',
-  PRIMARY KEY (`User`),
-  UNIQUE KEY `User` (`User`)
-) ENGINE=InnoDB DEFAULT CHARSET=utf8;
+   `User` varchar(255) CHARACTER SET utf8mb4 COLLATE utf8mb4_bin NOT NULL,
+   `Password` varchar(255) CHARACTER SET utf8mb4 COLLATE utf8mb4_bin NOT NULL,
+   `Uid` int(11) NOT NULL DEFAULT -1 COMMENT '用户 ID',
+   `Gid` int(11) NOT NULL DEFAULT -1 COMMENT '用户组 ID',
+   `Dir` varchar(255) CHARACTER SET utf8mb4 COLLATE utf8mb4_bin NOT NULL,
+   `quotafiles` int(255) NULL DEFAULT 500,
+   `quotasize` int(255) NULL DEFAULT 30,
+   `ulbandwidth` int(255) NULL DEFAULT 80,
+   `dlbandwidth` int(255) NULL DEFAULT 80,
+   `ipaddress` varchar(255) CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci NULL DEFAULT'*',
+   `comment` int(255) NULL DEFAULT NULL,
+   `status` tinyint(4) NULL DEFAULT 1,
+   `ulratio` int(255) NULL DEFAULT 1,
+   `dlratio` int(255) NULL DEFAULT 1,
+   PRIMARY KEY (`User`) USING BTREE
+) ENGINE = InnoDB CHARACTER SET = utf8mb4 COLLATE = utf8mb4_general_ci ROW_FORMAT = Dynamic;
 ```
 
 #### 创建登录数据库用户及设置密码
