--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -54,6 +54,7 @@ MinUID 2000
 # 仅允许认证用户进行 FXP 传输。
 AllowUserFXP yes
 
+# 若不禁止或注释，日志会报错找不到 ftp 用户
 # AntiWarez                    yes
 
 # 用户主目录不存在的话，自动创建。
@@ -217,7 +218,7 @@ MySQLGetQTASZ  SELECT QuotaSize FROM users WHERE User='\L'
 
 # Optional : ratios. The server has to be compiled with ratio support.
 
-# MySQLGetRatioUL SELECT ULRatio FROM users WHERE User='\L'
+MySQLGetRatioUL SELECT ULRatio FROM users WHERE User='\L'
 MySQLGetRatioDL SELECT DLRatio FROM users WHERE User='\L'
 
 
@@ -225,7 +226,7 @@ MySQLGetRatioDL SELECT DLRatio FROM users WHERE User='\L'
 # The server has to be compiled with throttling support.
 # Values are in KB/s .
 
-# MySQLGetBandwidthUL SELECT ULBandwidth FROM users WHERE User='\L'
+MySQLGetBandwidthUL SELECT ULBandwidth FROM users WHERE User='\L'
 MySQLGetBandwidthDL SELECT DLBandwidth FROM users WHERE User='\L'
 
 
@@ -280,6 +281,26 @@ Time restrictions  : 0000-0000 (unlimited)
 Max sim sessions   : 0 (unlimited)
 ```
 
+```sql
+root@localhost [(none)]> show databases;
++--------------------+
+| Database           |
++--------------------+
+| information_schema |
+| mysql              |
+| performance_schema |
+| pureftpd           |
+| sys                |
++--------------------+
+5 rows in set (0.00 sec)
+
+root@localhost [(none)]> use pureftpd;
+Database changed
+root@localhost [pureftpd]> select * from users;
+Empty set (0.00 sec)
+
+root@localhost [pureftpd]>
+```
 ### 服务操作
 
 ```sh
