--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -159,7 +159,7 @@ MYSQLDatabase   pureftpd
 # Mandatory : how passwords are stored
 # Valid values are : "cleartext", "argon2", "scrypt", "crypt", and "any"
 
-MYSQLCrypt      md5
+MYSQLCrypt      cleartext
 
 
 # In the following directives, parts of the strings are replaced at
@@ -252,12 +252,15 @@ MySQLGetBandwidthDL SELECT DLBandwidth FROM users WHERE User='\L'
 # pure-pw useradd ftpuser -u 2000 -g 2000 -d /home/ftpusers/ -m
 Password:
 Enter it again:
-# pure-pw mkdb
+```
+
+
+- 打印用户信息
+
+```sh
 # pure-pw list
 ftpuser             /home/ftpusers/./
 ```
-
-- 打印用户信息
 
 ```sh
 root@ykla:/ # pure-pw show ftpuser
