--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -246,10 +246,22 @@ MySQLGetBandwidthDL SELECT DLBandwidth FROM users WHERE User='\L'
 
 ### 添加 ftp 组和用户
 
+```sh
+# pw useradd ftpuser -u 2001 -g 2000 -s /sbin/nologin -w no -d /home/vftp -c "VirtualUser Pure-FTPd" -m
+```
+
+- 配置 FTP 目录
+
+```
+# mkdir /home/pureftp/www
+# chown -R ftpuser /home/pureftp/www
+# chgrp -R ftpgroup /home/pureftp/www
+```
+
 - 添加虚拟用户 ftpuser
 
 ```sh
-# pure-pw useradd ftpuser -u 2000 -g 2000 -d /home/ftpusers/ -m
+# pure-pw useradd ftpuser -u 2001 -g 2000 -d /home/pureftp/www -m
 Password:
 Enter it again:
 ```
@@ -259,7 +271,7 @@ Enter it again:
 
 ```sh
 # pure-pw list
-ftpuser             /home/ftpusers/./
+ftpuser             /home/ftpusers/www./
 ```
 
 ```sh
@@ -269,7 +281,7 @@ Login              : ftpuser
 Password           : $argon2id$v=19$m=8192,t=255,p=1$NBGoWqBK4vFiR/q23yXCKw$za3YI29bek9plHT2HqVjWHWRUUQSg4KKKKLcYrDnQ+0
 UID                : 2000 (-)
 GID                : 2000 (ftpgroup)
-Directory          : /home/ftpusers/./
+Directory          : /home/ftpusers/www./
 Full name          :
 Download bandwidth : 0 Kb (unlimited)
 Upload   bandwidth : 0 Kb (unlimited)
