--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -246,55 +246,26 @@ MySQLGetBandwidthDL SELECT DLBandwidth FROM users WHERE User='\L'
 
 ### 添加 ftp 组和用户
 
-```sh
-# pw useradd ftpuser -u 2001 -g 2000 -s /sbin/nologin -w no -d /home/vftp -c "VirtualUser Pure-FTPd" -m
-```
+>**警告**
+>
+>使用数据库后，pure-pw 就没用了。
 
-- 配置 FTP 目录
-
-```
-# mkdir /home/pureftp/www
-# chown -R ftpuser /home/pureftp/www
-# chgrp -R ftpgroup /home/pureftp/www
-```
-
-- 添加虚拟用户 ftpuser
 
 ```sh
-# pure-pw useradd ftpuser -u 2001 -g 2000 -d /home/pureftp/www -m
-Password:
-Enter it again:
+# pw groupadd ftpgroup -g 2000
+# pw useradd ftpuser -u 2001 -g 2001 -s /sbin/nologin -w no -d /home/pureftp -c "VirtualUser Pure-FTPd" -m
 ```
 
+- 添加 FTP 登录用户（必须手动写入 mysql 数据库），以下命令创建的用户是 test。密码是 test2。
 
-- 打印用户信息
 
-```sh
-# pure-pw list
-ftpuser             /home/ftpusers/www./
+```sql
+USE pureftpd;
+INSERT INTO `users` (`User`, `Password`, `Uid`, `Gid`, `Dir`, `quotafiles`, `quotasize`, `ulbandwidth`, `dlbandwidth`, `ipaddress`, `comment`, `status`, `ulratio`, `dlratio`)
+VALUES ('test', 'test2', 2002, 2000, '/home/pureftp/www', 500, 30, 80, 80, '*', NULL, 1, 1, 1);
 ```
 
-```sh
-root@ykla:/ # pure-pw show ftpuser
-
-Login              : ftpuser
-Password           : $argon2id$v=19$m=8192,t=255,p=1$NBGoWqBK4vFiR/q23yXCKw$za3YI29bek9plHT2HqVjWHWRUUQSg4KKKKLcYrDnQ+0
-UID                : 2000 (-)
-GID                : 2000 (ftpgroup)
-Directory          : /home/ftpusers/www./
-Full name          :
-Download bandwidth : 0 Kb (unlimited)
-Upload   bandwidth : 0 Kb (unlimited)
-Max files          : 0 (unlimited)
-Max size           : 0 Mb (unlimited)
-Ratio              : 0:0 (unlimited:unlimited)
-Allowed local  IPs :
-Denied  local  IPs :
-Allowed client IPs :
-Denied  client IPs :
-Time restrictions  : 0000-0000 (unlimited)
-Max sim sessions   : 0 (unlimited)
-```
+实际操作示例：
 
 ```sql
 root@localhost [(none)]> show databases;
@@ -308,14 +279,28 @@ root@localhost [(none)]> show databases;
 | sys                |
 +--------------------+
 5 rows in set (0.00 sec)
-
-root@localhost [(none)]> use pureftpd;
+root@localhost [pureftpd]> USE pureftpd;
 Database changed
+root@localhost [pureftpd]> INSERT INTO `users` (`User`, `Password`, `Uid`, `Gid`, `Dir`, `quotafiles`, `quotasize`, `ulbandwidth`, `dlbandwidth`, `ipaddress`, `comment`, `status`, `ulratio`, `dlratio`)
+    -> VALUES ('test', 'test2*', 2002, 2000, '/home/pureftp/www', 500, 30, 80, 80, '*', NULL, 1,1, 1);
+Query OK, 1 row affected (0.01 sec)
 root@localhost [pureftpd]> select * from users;
-Empty set (0.00 sec)
-
-root@localhost [pureftpd]>
++------+------------+------+------+-------------------+------------+-----------+-------------+-------------+-----------+---------+--------+---------+---------+
+| User | Password   | Uid  | Gid  | Dir               | quotafiles | quotasize | ulbandwidth | dlbandwidth | ipaddress | comment | status | ulratio | dlratio |
++------+------------+------+------+-------------------+------------+-----------+-------------+-------------+-----------+---------+--------+---------+---------+
+| test | test2      | 2002 | 2000 | /home/pureftp/www |        500 |        30 |          80 |      80 | *         |    NULL |      1 |       1 |       1 |
++------+------------+------+------+-------------------+------------+-----------+-------------+-------------+-----------+---------+--------+---------+---------+
+2 rows in set (0.00 sec)
 ```
+
+- 配置 FTP 目录
+
+```sh
+# mkdir -p /home/pureftp/www
+# chown -R ftpuser:ftpgroup /home/pureftp
+```
+
+
 ### 服务操作
 
 ```sh
