--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -256,7 +256,7 @@ MySQLGetBandwidthDL SELECT DLBandwidth FROM users WHERE User='\L'
 # pw useradd ftpuser -u 2001 -g 2000 -s /sbin/nologin -w no -d /home/pureftp -c "VirtualUser Pure-FTPd" -m
 ```
 
-- 添加 FTP 登录用户（必须手动写入 mysql 数据库），以下命令创建的用户是 test。密码是 test2。
+- 添加 FTP 登录用户（必须手动写入 mysql 数据库），以下命令创建的用户是 `test`。密码是 `test2`。
 
 
 ```sql
@@ -264,6 +264,10 @@ USE pureftpd;
 INSERT INTO `users` (`User`, `Password`, `Uid`, `Gid`, `Dir`, `quotafiles`, `quotasize`, `ulbandwidth`, `dlbandwidth`, `ipaddress`, `comment`, `status`, `ulratio`, `dlratio`)
 VALUES ('test', 'test2', 2001, 2000, '/home/pureftp/www', 500, 30, 80, 80, '*', NULL, 1, 1, 1);
 ```
+
+>**注意**
+>
+>写入表的 `Uid`、`Gid` 必须和上文 `pw useradd` 创建的用户一致。
 
 实际操作示例：
 
@@ -282,24 +286,29 @@ root@localhost [(none)]> show databases;
 root@localhost [pureftpd]> USE pureftpd;
 Database changed
 root@localhost [pureftpd]> INSERT INTO `users` (`User`, `Password`, `Uid`, `Gid`, `Dir`, `quotafiles`, `quotasize`, `ulbandwidth`, `dlbandwidth`, `ipaddress`, `comment`, `status`, `ulratio`, `dlratio`)
-    -> VALUES ('test', 'test2*', 2002, 2000, '/home/pureftp/www', 500, 30, 80, 80, '*', NULL, 1,1, 1);
+    -> VALUES ('test', 'test2', 2001, 2000, '/home/pureftp/www', 500, 30, 80, 80, '*', NULL, 1,1, 1);
 Query OK, 1 row affected (0.01 sec)
 root@localhost [pureftpd]> select * from users;
-+------+------------+------+------+-------------------+------------+-----------+-------------+-------------+-----------+---------+--------+---------+---------+
-| User | Password   | Uid  | Gid  | Dir               | quotafiles | quotasize | ulbandwidth | dlbandwidth | ipaddress | comment | status | ulratio | dlratio |
-+------+------------+------+------+-------------------+------------+-----------+-------------+-------------+-----------+---------+--------+---------+---------+
-| test | test2      | 2002 | 2000 | /home/pureftp/www |        500 |        30 |          80 |      80 | *         |    NULL |      1 |       1 |       1 |
-+------+------------+------+------+-------------------+------------+-----------+-------------+-------------+-----------+---------+--------+---------+---------+
-2 rows in set (0.00 sec)
++------+----------+------+------+-------------------+------------+-----------+-------------+-------------+-----------+---------+--------+---------+---------+
+| User | Password | Uid  | Gid  | Dir               | quotafiles | quotasize | ulbandwidth | dlbandwidth | ipaddress | comment | status | ulratio | dlratio |
++------+----------+------+------+-------------------+------------+-----------+-------------+-------------+-----------+---------+--------+---------+---------+
+| test | test2    | 2001 | 2000 | /home/pureftp/www |        500 |        30 |          80 |    80 | *         |    NULL |      1 |       1 |       1 |
++------+----------+------+------+-------------------+------------+-----------+-------------+-------------+-----------+---------+--------+---------+---------+
+1 row in set (0.01 sec)
+
 ```
 
 - 配置 FTP 目录
 
 ```sh
-# mkdir -p /home/pureftp/www
+# mkdir -p /home/pureftp/www 
 # chown -R ftpuser:ftpgroup /home/pureftp
+# chmod -R 775 /home/ftpuser # 权限要设置为 775，这样同组的才能读写
 ```
 
+#### 参考文献
+
+- [Linux 环境下 FTP 权限设置详解与操作步骤全攻略](https://my.oschina.net/emacs_8748786/blog/17171107),775 权限设置来自此处
 
 ### 服务操作
 
@@ -309,6 +318,10 @@ root@localhost [pureftpd]> select * from users;
 # service pure-ftpd stop    # 停止服务
 # service pure-ftpd restart # 重启服务
 ```
+
+### 参考文献
+
+- [Virtual Hosting With PureFTPd And MySQL](http://km.npru.ac.th/userfiles/R013/km_articles_files/20120227104346_Virtual%20Hosting%20With%20PureFTPd%20And%20MySQL.pdf)，本文框架基于此
 
 ### 故障排除
 
