--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -6,7 +6,7 @@ FTP 即 File Transfer Protocol（文件传输协议）。使用 FTP 服务搭建
 
 > **警告**
 >
-> Pure-FTPd 已经移除了对 [RFC 2640](https://github.com/comehope/rfc-translation/blob/master/rfc-2640-cn.pdf) 的支持，所以 Windows 下的非英文的文件上传至 FTP 会乱码，见 [https://www.pureftpd.org/project/pure-ftpd/news/](https://www.pureftpd.org/project/pure-ftpd/news/) 。无法解决，同时不建议把 Windows 的系统编码改为 UTF8，会造成更多乱码的发生，比如 zip 文件。
+> Pure-FTPd 使用 WinSCP、命令行测试并不存在乱码问题。
 
 ### 安装
 
