--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -529,7 +529,7 @@ Query OK, 1 row affected, 1 warning (0.02 sec)
 ### 服务操作
 
 ```sh
-# service pure-ftpd enable
+#  sysrc  proftpd_enable="YES"
 
 # service proftpd start #启动服务器
 
