--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -6,7 +6,12 @@ FTP 即 File Transfer Protocol（文件传输协议）。使用 FTP 服务搭建
 
 > **警告**
 >
-> Pure-FTPd 使用 WinSCP、命令行测试并不存在乱码问题。
+> Pure-FTPd 使用命令行测试（FreeBSD 下）并不存在乱码问题。对于 RFC 2640 的支持已经被移除，所以 Windows 下使用 ftp 命令行处理 FTP 非英文相关文件会乱码（WinSCP 等客户端是正常的），且无法修改编码。见 <https://www.pureftpd.org/project/pure-ftpd/news/>：
+> 
+> ```batch
+> ftp> quote opts utf8 on
+>504 Unknown command
+>```
 
 ### 安装
 
