重写“Pure-FTPd（基于 MySQL）” (#229)
* Update di-3.2-jie-freebsd-huan-yuan-fang-shi.md

* Update di-16.1-jie-ftp-fu-wu-qi.md

* Add files via upload

* Update di-16.1-jie-ftp-fu-wu-qi.md

* Update di-16.1-jie-ftp-fu-wu-qi.md

* Update di-16.1-jie-ftp-fu-wu-qi.md

* Update di-17.5-jie-mysql-8.x.md

* Update di-16.1-jie-ftp-fu-wu-qi.md

* Update di-16.1-jie-ftp-fu-wu-qi.md

* Update di-16.1-jie-ftp-fu-wu-qi.md

* 更新 di-16.1-jie-ftp-fu-

* Update di-16.1-jie-ftp-fu-wu-qi.md

* Update di-16.1-jie-ftp-fu-wu-qi.md

* Update di-16.1-jie-ftp-fu-wu-qi.md

* Update di-16.1-jie-ftp-fu-wu-qi.md

* Update di-16.1-jie-ftp-fu-wu-qi.md

* Update di-16.1-jie-ftp-fu-wu-qi.md

* Update di-16.1-jie-ftp-fu-wu-qi.md

* Update di-16.1-jie-ftp-fu-wu-qi.md

* Update di-16.1-jie-ftp-fu-wu-qi.md

* Update di-16.1-jie-ftp-fu-wu-qi.md

* 更新 di-16.1-jie-ftp-fu-wu-qi.md

* Update di-16.1-jie-ftp-fu-wu-qi.md

* Update di-16.1-jie-ftp-fu-wu-qi.md

* Update di-16.1-jie-ftp-fu-wu-qi.md

* Update di-16.1-jie-ftp-fu-wu-qi.md

* Update di-16.1-jie-ftp-fu-wu-qi.md

* Update CHANGELOG.md

* Update README.md

--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -2,39 +2,35 @@
 
 FTP 即 File Transfer Protocol（文件传输协议）。使用 FTP 服务搭建服务器可以快速传输文件。
 
-## pure-ftpd（以 MySQL 支持为例）
+## Pure-FTPd（基于 MySQL）
 
 > **警告**
 >
-> **对于 RFC 2640 的支持已经被移除，所以 Windows 下的非英文的文件上传至 FTP 会乱码，见** [**https://www.pureftpd.org/project/pure-ftpd/news/**](https://www.pureftpd.org/project/pure-ftpd/news/) **无法解决，同时不建议把 Windows 的系统编码改为 UTF8，会造成更多乱码的发生，比如 zip 文件。**
-
-> **注意**
->
->本示例基于 mysql 5.x。请自行安装 mysql，理论上兼容 mysql 5.x、8.x。
+> Pure-FTPd 使用命令行测试（FreeBSD 下）并不存在乱码问题。对于 RFC 2640 的支持已经被移除，所以 Windows 下使用 ftp 命令行处理 FTP 非英文相关文件会乱码（WinSCP 等客户端是正常的），且无法修改编码。见 <https://www.pureftpd.org/project/pure-ftpd/news/>：
+> 
+> ```batch
+> ftp> quote opts utf8 on
+>504 Unknown command
+>```
 
 ### 安装
 
-由于 pkg 包不带有数据库支持功能，所以需要通过 ports 来安装该软件：
+由于 pkg 包没有数据库支持功能，所以需要通过 ports 来安装该软件：
 
 ```sh
-# /usr/ports/ftp/pure-ftpd
-# make config-recursive
+# cd /usr/ports/ftp/pure-ftpd
+# make config
 ```
 
-选中 mysql，其余保持默认选项回车即可：
+选中 `MYSQL`，其余保持默认选项回车即可：
 
 ![](../.gitbook/assets/PureFTPD.png)
 
 ```sh
-# make install clean
+# make BATCH=yes install clean
 ```
 
-> **注意**
->
->关于 mysql 的基本设置请看其他章节
-
-
-### 配置 /usr/local/etc/pure-ftpd.conf 文件
+### 配置 `/usr/local/etc/pure-ftpd.conf` 文件
 
 #### 生成配置文件
 
@@ -45,35 +41,48 @@ FTP 即 File Transfer Protocol（文件传输协议）。使用 FTP 服务搭建
 
 #### 编辑配置文件并增加 mysql 的支持
 
-```sh
-#兼容 ie 等非正规化的 ftp 客户端
+配置 `/usr/local/etc/pure-ftpd.conf` 文件，以下项目修改如下：
+
+```ini
+# 兼容 ie 等非正规化的 ftp 客户端
 
 BrokenClientsCompatibility yes
 
 # 被动连接响应的端口范围。
 PassivePortRange 30000 50000
 
-# 认证用户允许登陆的最小组 ID（UID）。
+# 允许认证用户登录的最小 UID。
+# 例如，值为 100 会阻止所有 UID 小于 100 的用户登录。
+# 如果您希望 root 能够登录，请使用 0。
 MinUID 2000
 
 # 仅允许认证用户进行 FXP 传输。
 AllowUserFXP yes
 
+# 若不禁止或注释，日志会报错找不到 ftp 用户
+# AntiWarez                    yes
+
 # 用户主目录不存在的话，自动创建。
 CreateHomeDir yes
 
-# MySQL configuration file (see README.MySQL)
+# MySQL 配置文件（参见 README.MySQL）
 
 MySQLConfigFile /usr/local/etc/pureftpd-mysql.conf
 ```
 
 ### 配置 mysql
 
+> **注意**
+>
+>本文基于 mysql 8.x。关于 mysql 的安全、基本设置请看其他章节。
+
+请自行安装配置 mysql 8.x。
+
 #### 创建数据库
 
-```sh
-create database pureftp;
-use pureftp;
+```sql
+create database pureftpd;
+use pureftpd;
 DROP TABLE IF EXISTS `users`;
 CREATE TABLE `users` (
    `User` varchar(255) CHARACTER SET utf8mb4 COLLATE utf8mb4_bin NOT NULL,
@@ -84,7 +93,7 @@ CREATE TABLE `users` (
    `quotafiles` int(255) NULL DEFAULT 500,
    `quotasize` int(255) NULL DEFAULT 30,
    `ulbandwidth` int(255) NULL DEFAULT 80,
-    `dlbandwidth` int(255) NULL DEFAULT 80,
+   `dlbandwidth` int(255) NULL DEFAULT 80,
    `ipaddress` varchar(255) CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci NULL DEFAULT'*',
    `comment` int(255) NULL DEFAULT NULL,
    `status` tinyint(4) NULL DEFAULT 1,
@@ -92,64 +101,70 @@ CREATE TABLE `users` (
    `dlratio` int(255) NULL DEFAULT 1,
    PRIMARY KEY (`User`) USING BTREE
 ) ENGINE = InnoDB CHARACTER SET = utf8mb4 COLLATE = utf8mb4_general_ci ROW_FORMAT = Dynamic;
-INSERT INTO `users` VALUES ('demo', 'demo&2022*', 2002, 2000, '/home/www/demo', 500, 30, 80, 80, '*', NULL, NULL, 1, 1);
 ```
 
 #### 创建登录数据库用户及设置密码
 
-```sh
-grant select,insert,update,delete on pureftp.* to pftp@localhost identified by "Ab123456&";
+```sql
+CREATE USER 'pftp'@'localhost' IDENTIFIED BY 'abc123';
+GRANT SELECT, INSERT, UPDATE, DELETE ON pureftpd.* TO 'pftp'@'localhost';
+flush privileges;
 ```
 
-### 配置 /usr/local/etc/pureftpd-mysql.conf
+测试数据库链接：
 
 ```sh
+# mysql -u pftp -p -h localhost pureftpd
+```
+
+### 配置 `/usr/local/etc/pureftpd-mysql.conf`
+
+完整示例：
+
+```sh
+
 ##############################################
-# #
+#                                            #
 # Sample Pure-FTPd Mysql configuration file. #
-# See README.MySQL for explanations. #
-# #
+# See README.MySQL for explanations.         #
+#                                            #
 ##############################################
 
 
 # Optional : MySQL server name or IP. Don't define this for unix sockets.
 
-# MYSQLServer 127.0.0.1
-MYSQLServer localhost
+MYSQLServer     127.0.0.1
 
 
 # Optional : MySQL port. Don't define this if a local unix socket is used.
 
-MYSQLPort 3306
+MYSQLPort       3306
 
 
 # Optional : define the location of mysql.sock if the server runs on this host.
 
-MYSQLSocket /var/run/mysqld/mysqld.sock
+MYSQLSocket     /var/run/mysqld/mysqld.sock
 
 
 # Mandatory : user to bind the server as.
 
-MYSQLUser pftp
+MYSQLUser       pftp
 
 
 # Mandatory : user password. You must have a password.
 
-MYSQLPassword Ab123456&
+MYSQLPassword   abc123
 
 
 # Mandatory : database to open.
 
-MYSQLDatabase pureftpd
+MYSQLDatabase   pureftpd
 
 
 # Mandatory : how passwords are stored
-# Valid values are : "cleartext", "argon2", "scrypt", "crypt", "sha1", "md5",password" and "any"
+# Valid values are : "cleartext", "argon2", "scrypt", "crypt", and "any"
 
-# ("password" = MySQL password() function, which is sha1(sha1(password)))
-
-#MYSQLCrypt scrypt
-MYSQLCrypt cleartext
+MYSQLCrypt      cleartext
 
 
 # In the following directives, parts of the strings are replaced at
@@ -166,11 +181,11 @@ MYSQLCrypt cleartext
 
 # Query to execute in order to fetch the password
 
-MYSQLGetPW SELECT Password FROM users WHERE User='\L'
+MYSQLGetPW      SELECT Password FROM users WHERE User='\L'
 
 
 # Query to execute in order to fetch the system user name or uid
-MYSQLGetUID SELECT Uid FROM users WHERE User='\L'
+MYSQLGetUID     SELECT Uid FROM users WHERE User='\L'
 
 
 # Optional : default UID - if set this overrides MYSQLGetUID
@@ -180,7 +195,7 @@ MYSQLDefaultUID 2000
 
 # Query to execute in order to fetch the system user group or gid
 
-MYSQLGetGID SELECT Gid FROM users WHERE User='\L'
+MYSQLGetGID     SELECT Gid FROM users WHERE User='\L'
 
 
 # Optional : default GID - if set this overrides MYSQLGetGID
@@ -190,34 +205,34 @@ MYSQLDefaultGID 2000
 
 # Query to execute in order to fetch the home directory
 
-MYSQLGetDir SELECT Dir FROM users WHERE User='\L'
+MYSQLGetDir     SELECT Dir FROM users WHERE User='\L'
 
 
-# Optional : query to get the maximal number of files
+# Optional : query to get the maximal number of files 
 # Pure-FTPd must have been compiled with virtual quotas support.
 
-# MySQLGetQTAFS SELECT QuotaFiles FROM users WHERE User='\L'
+MySQLGetQTAFS  SELECT QuotaFiles FROM users WHERE User='\L'
 
 
 # Optional : query to get the maximal disk usage (virtual quotas)
 # The number should be in Megabytes.
 # Pure-FTPd must have been compiled with virtual quotas support.
 
-# MySQLGetQTASZ SELECT QuotaSize FROM users WHERE User='\L'
+MySQLGetQTASZ  SELECT QuotaSize FROM users WHERE User='\L'
 
 
 # Optional : ratios. The server has to be compiled with ratio support.
 
-# MySQLGetRatioUL SELECT ULRatio FROM users WHERE User='\L'
-# MySQLGetRatioDL SELECT DLRatio FROM users WHERE User='\L'
+MySQLGetRatioUL SELECT ULRatio FROM users WHERE User='\L'
+MySQLGetRatioDL SELECT DLRatio FROM users WHERE User='\L'
 
 
 # Optional : bandwidth throttling.
 # The server has to be compiled with throttling support.
 # Values are in KB/s .
 
-# MySQLGetBandwidthUL SELECT ULBandwidth FROM users WHERE User='\L'
-# MySQLGetBandwidthDL SELECT DLBandwidth FROM users WHERE User='\L'
+MySQLGetBandwidthUL SELECT ULBandwidth FROM users WHERE User='\L'
+MySQLGetBandwidthDL SELECT DLBandwidth FROM users WHERE User='\L'
 
 
 # Enable ~ expansion. NEVER ENABLE THIS BLINDLY UNLESS :
@@ -236,35 +251,88 @@ MYSQLGetDir SELECT Dir FROM users WHERE User='\L'
 
 ### 添加 ftp 组和用户
 
+>**警告**
+>
+>使用数据库后，pure-pw 就没用了。
+
+
 ```sh
 # pw groupadd ftpgroup -g 2000
-# pw useradd ftpuser -u 2001 -g 2000
+# pw useradd ftpuser -u 2001 -g 2000 -s /sbin/nologin -w no -d /home/pureftp -c "VirtualUser Pure-FTPd" -m
 ```
 
-或
+- 添加 FTP 登录用户（必须手动写入 mysql 数据库），以下命令创建的用户是 `test`。密码是 `test2`。
+
+
+```sql
+USE pureftpd;
+INSERT INTO `users` (`User`, `Password`, `Uid`, `Gid`, `Dir`, `quotafiles`, `quotasize`, `ulbandwidth`, `dlbandwidth`, `ipaddress`, `comment`, `status`, `ulratio`, `dlratio`)
+VALUES ('test', 'test2', 2001, 2000, '/home/pureftp/www', 500, 30, 80, 80, '*', NULL, 1, 1, 1);
+```
+
+>**注意**
+>
+>写入表的 `Uid`、`Gid` 必须和上文 `pw useradd` 创建的用户一致。
+
+实际操作示例：
+
+```sql
+root@localhost [(none)]> show databases;
++--------------------+
+| Database           |
++--------------------+
+| information_schema |
+| mysql              |
+| performance_schema |
+| pureftpd           |
+| sys                |
++--------------------+
+5 rows in set (0.00 sec)
+root@localhost [pureftpd]> USE pureftpd;
+Database changed
+root@localhost [pureftpd]> INSERT INTO `users` (`User`, `Password`, `Uid`, `Gid`, `Dir`, `quotafiles`, `quotasize`, `ulbandwidth`, `dlbandwidth`, `ipaddress`, `comment`, `status`, `ulratio`, `dlratio`)
+    -> VALUES ('test', 'test2', 2001, 2000, '/home/pureftp/www', 500, 30, 80, 80, '*', NULL, 1,1, 1);
+Query OK, 1 row affected (0.01 sec)
+root@localhost [pureftpd]> select * from users;
++------+----------+------+------+-------------------+------------+-----------+-------------+-------------+-----------+---------+--------+---------+---------+
+| User | Password | Uid  | Gid  | Dir               | quotafiles | quotasize | ulbandwidth | dlbandwidth | ipaddress | comment | status | ulratio | dlratio |
++------+----------+------+------+-------------------+------------+-----------+-------------+-------------+-----------+---------+--------+---------+---------+
+| test | test2    | 2001 | 2000 | /home/pureftp/www |        500 |        30 |          80 |    80 | *         |    NULL |      1 |       1 |       1 |
++------+----------+------+------+-------------------+------------+-----------+-------------+-------------+-----------+---------+--------+---------+---------+
+1 row in set (0.01 sec)
+
+```
+
+- 配置 FTP 目录
 
 ```sh
-# pw useradd ftpuser -u 2001 -g 2000 -s /sbin/nologin -w no -d /home/vftp -c "VirtualUser Pure-FTPd" -m
+# mkdir -p /home/pureftp/www 
+# chown -R ftpuser:ftpgroup /home/pureftp
+# chmod -R 775 /home/ftpuser # 权限要设置为 775，这样同组的才能读写
 ```
 
-### 配置 FTP 目录
+#### 参考文献
 
-```sh
-# mkdir /home/www/pureftp
-# chown -R ftpuser /home/www/
-# chgrp -R ftpgroup /home/www/
-```
+- [Linux 环境下 FTP 权限设置详解与操作步骤全攻略](https://my.oschina.net/emacs_8748786/blog/17171107),775 权限设置来自此处
 
 ### 服务操作
 
 ```sh
-# sysrc pureftpd_enable="YES"
-# service pure-ftpd start   #启动服务器
-# service pure-ftpd stop    #停止服务
-# service pure-ftpd restart #重启服务
+# service pure-ftpd enable  # 添加服务
+# service pure-ftpd start   # 启动服务器
+# service pure-ftpd stop    # 停止服务
+# service pure-ftpd restart # 重启服务
 ```
 
-## proftpd（以 mysql 支持为例）
+### 参考文献
+
+- [Virtual Hosting With PureFTPd And MySQL](http://km.npru.ac.th/userfiles/R013/km_articles_files/20120227104346_Virtual%20Hosting%20With%20PureFTPd%20And%20MySQL.pdf)，本文框架基于此
+
+### 故障排除
+
+- Pure-FTPd 日志在 `/var/log/messages`。
+
+## proftpd（基于 mysql）
 
 ### 安装 proftpd（以 mysql 支持为例）
 
@@ -466,7 +534,7 @@ Query OK, 1 row affected, 1 warning (0.02 sec)
 ### 服务操作
 
 ```sh
-# sysrc  proftpd_enable="YES"
+#  sysrc  proftpd_enable="YES"
 
 # service proftpd start #启动服务器
 
