--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -121,7 +121,7 @@ flush privileges;
 
 完整示例：
 
-```sh
+```ini
 
 ##############################################
 #                                            #
