--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -74,7 +74,7 @@ MySQLConfigFile /usr/local/etc/pureftpd-mysql.conf
 
 > **注意**
 >
->本文基于 mysql 8.x。关于 mysql 的安全、基本设置请看其他章节。
+>本文基于 MySQL 8.x。关于 MySQL 的安装、基本设置请看其他章节。
 
 请自行安装配置 mysql 8.x。
 
@@ -334,7 +334,13 @@ root@localhost [pureftpd]> select * from users;
 
 ## proftpd（基于 mysql）
 
-### 安装 proftpd（以 mysql 支持为例）
+### 安装 proftpd
+
+> **注意**
+>
+>本文基于 MySQL 8.0。关于 MySQL 的安装、基本设置请看其他章节。
+
+请自行安装配置 MySQL 8.x——需要与 `proftpd-mod_sql_mysql` 安装的 `databases/mysql8X-client` 版本相一致。
 
 ```sh
 # pkg install proftpd proftpd-mod_sql_mysql
@@ -347,75 +353,85 @@ root@localhost [pureftpd]> select * from users;
 # cd /usr/ports/databases/proftpd-mod_sql_mysql/ && make install clean
 ```
 
-### 编辑配置文件 /usr/local/etc/proftpd.conf
+### 配置文件 `/usr/local/etc/proftpd.conf`
+
+- 编辑配置文件 `/usr/local/etc/proftpd.conf` 如下
 
 ```sh
-# cat /usr/local/etc/proftpd.conf
 ServerName "Test Ftp Server"
 ServerType standalone
 DefaultServer on
 ServerIdent on "FTP Server ready"
-DeferWelcome off
 Port 21
 Umask 022
+
+# 超时设置
 TimeoutLogin 300
 TimeoutIdle 36000
 TimeoutNoTransfer 36000
-TimeoutStalled 36000
-TimeoutSession 0
+
+# 资源限制
 User proftpd
 Group proftpd
-MaxInstances 100
-MaxClientsPerHost 100
-AllowRetrieveRestart on
-AllowStoreRestart on
-AllowOverwrite on
-AllowOverride off
-RootLogin off
-IdentLookups off
-UseReverseDNS off
-DenyFilter \*.*/
-TimesGMT off
-DefaultRoot ~
-#RLimitCPU 1200 1200
 RLimitMemory 256M 256M
 RLimitOpenFiles 1024 1024
 PassivePorts 50000 60000
+
+# 日志配置
 LogFormat default "%h %l %u %t \"%r\" %s %b"
 LogFormat auth "%v [%P] %h %t \"%r\" %s"
-LogFormat write "%h %l %u %t \"%r\" %s %b"
 SystemLog /var/log/proftpd/proftpd.log
 TransferLog /var/log/proftpd/xfer.log
-ExtendedLog /var/log/proftpd/access.log WRITE,READ write
 ExtendedLog /var/log/proftpd/auth.log AUTH auth
+
+# MySQL 模块加载
 LoadModule mod_sql.c
 LoadModule mod_sql_mysql.c
+LoadModule mod_sql_passwd.c
+
 <Global>
-   SQLConnectInfo proftpd@localhost proftpd proftpd_password
-   SQLAuthTypes Crypt
-   SQLUserInfo users username password uid gid homedir NULL
-   SQLDefaultGID 2000
-   SQLDefaultUID 2000
-   RequireValidShell off
-   SQLAuthenticate users*
-   SQLLogFile /var/log/proftpd.log
-   SQLNamedQuery getcount SELECT "count, username from users where username='%u'"
-   SQLNamedQuery updatecount UPDATE "count=count+1 WHERE username='%u'" users
-   SQLShowInfo PASS "230" "You've logged on %{getcount} times, %u"
-   SQLLog PASS updatecount
-   SQLLog DELE,RETR,STOR, log_work
-   SQLNamedQuery log_work FREEFORM "\
-   INSERT INTO worklog (\
-   user_name,\
-   file_and_path,\
-   bytes,\
-   send_time,\
-   client_ip,\
-   client_name,\
-   client_command) \
-  VALUES('%u','%f','%b','%T','%a','%h','%m')"
+  # 数据库连接
+  SQLConnectInfo proftpd@localhost proftpd proftpd_password
+  
+  # 关键修正部分
+  SQLAuthTypes SHA256
+  SQLPasswordEngine on
+  
+  # 用户表映射
+  SQLUserInfo users username password uid gid homedir shell
+  SQLDefaultGID 2000
+  SQLDefaultUID 2000
+  RequireValidShell off
+  
+  # 认证配置
+  AuthOrder mod_sql.c
+  SQLAuthenticate users
+  
+  # 登录统计
+  SQLNamedQuery getcount SELECT "CONCAT('Total logins: ', count) FROM users WHERE username='%u'"
+  SQLNamedQuery updatecount UPDATE "count=count+1 WHERE username='%u'" users
+  SQLShowInfo PASS "230" "%{getcount}"
+  SQLLog PASS updatecount
+  
+  # 文件操作日志
+	
+  SQLNamedQuery log_work FREEFORM "INSERT INTO worklog (user_name, file_and_path, bytes, send_time, client_ip, client_name, client_command) VALUES ('%u', '%f', %b, NULLIF('%T', ''), '%a', '%h', '%m')"
+  
+  SQLLog RETR,STOR,DELE log_work
+  
+  # 目录权限修正
+  <Directory ~/>
+    AllowOverwrite on
+    <Limit ALL>
+      AllowAll
+    </Limit>
+  </Directory>
 </Global>
 ```
+
+>**技巧**
+>
+>有语法检查命令 `proftpd -t -d5`。
 
 我们在设置中指定服务器将在主动模式下在端口 21 上工作，在被动模式下在 50000-60000 范围内工作。这些端口应该在防火墙中打开。对于 PF，这是通过以下规则完成的：
 
@@ -438,109 +454,136 @@ Login class [default]:
 Shell (sh csh tcsh bash nologin) [sh]: nologin
 Home directory [/home/proftpd]:
 Home directory permissions (Leave empty for default):
+Enable ZFS encryption? (yes/no) [no]:
 Use password-based authentication? [yes]: no
 Lock out the account after creation? [no]:
-Username : proftpd
-Password : <disabled>
-Full Name : FTP User
-Uid : 2000
-Class :
-Groups : proftpd
-Home : /home/proftpd
-Shell : /usr/sbin/nologin
-Locked : no
-OK? (yes/no): yes
+Username    : proftpd
+Password    : <disabled>
+Full Name   : FTP User
+Uid         : 1002
+ZFS dataset : zroot/home/proftpd
+Class       :
+Groups      : proftpd
+Home        : /home/proftpd
+Home Mode   :
+Shell       : /usr/sbin/nologin
+Locked      : no
+adduser: INFO: Successfully created ZFS dataset (zroot/home/proftpd).
 adduser: INFO: Successfully added (proftpd) to the user database.
-Add another user? (yes/no): no
+Add another user? (yes/no) [no]:
 Goodbye!
 ```
 
-现在已经创建了自己的 proftpd 用户和组 ID。因此，在添加 ftp 用户时，你将使用它。你可以通过以 下方式确定 UID：
+现在已经创建了自己的 proftpd 用户和组 ID。在添加 ftp 用户时，你将使用它。你可以通过以下方式确定 UID：
 
 ```sh
-# cat /etc/passwd | grep proftpd
-proftpd:*:2000:2000:FTP User:/home/proftpd:/usr/sbin/nologin
+root@ykla:/home/ykla # id proftpd
+uid=1002(proftpd) gid=1002(proftpd) groups=1002(proftpd)
 ```
 
-### 日志相关
+### 数据库相关
 
-创建一个目录来存储 FTP 服务器的日志：
+- 创建一个目录来存储 FTP 服务器的日志：
 
 ```sh
 # mkdir /var/log/proftpd
 ```
 
-创建一个 MySQL 数据库和一个对创建的数据库具有完全访问权限的用户：
+- 创建一个 MySQL 数据库和一个对创建的数据库具有完全访问权限的用户：
 
-```sh
-CREATE DATABASE `proftpd` CHARACTER SET utf8 COLLATE utf8_general_ci;
+```sql
+CREATE DATABASE `proftpd` CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci;
 ```
 
-创建数据库用户和密码 (授权 proftpd 数据库)：
+- 创建数据库用户和密码 (授权 proftpd 数据库)：
 
 ```sh
-grant select,insert,update,delete on proftpd.* to pftp@localhost identified by "123456";
-FLUSH PRIVILEGES;  #立即生效权限
+CREATE USER 'proftpd'@'localhost' IDENTIFIED BY '123456';
+GRANT SELECT, INSERT, UPDATE, DELETE ON proftpd.* TO 'pftp'@'localhost';
+FLUSH PRIVILEGES;
 ```
 
-或
+- 创建数据表：
 
-```sh
-grant select,insert,update,delete on *.* to pftp@"localhost" Identified by "123456";
-```
+```sql
+USE proftpd;
 
-创建数据量：
-
-```sh
 DROP TABLE IF EXISTS users;
 CREATE TABLE `users` (
-   `username` varchar(30) NOT NULL DEFAULT '',
-   `descr` text CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci NOT NULL,
-   `password` varchar(30) NOT NULL DEFAULT '',
-   `uid` int(11) DEFAULT NULL,
-   `gid` int(11) DEFAULT NULL,
-   `homedir` varchar(255) DEFAULT NULL,
-   `shell` varchar(255) DEFAULT NULL,
-   `count` int(11) NOT NULL DEFAULT '0',
-  UNIQUE KEY `username` (`username`)
-) ENGINE=MyISAM DEFAULT CHARSET=utf8mb4;
+   `username` VARCHAR(30) NOT NULL,
+   `descr` TEXT CHARACTER SET utf8mb4 COLLATE utf8mb4_0900_ai_ci NOT NULL,
+   `password` VARCHAR(64) NOT NULL,
+   `uid` INT(11) DEFAULT NULL,
+   `gid` INT(11) DEFAULT NULL,
+   `homedir` VARCHAR(255) DEFAULT NULL,
+   `shell` VARCHAR(255) DEFAULT NULL,
+   `count` INT(11) NOT NULL DEFAULT 0,
+   PRIMARY KEY (`username`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;
 DROP TABLE IF EXISTS worklog;
 CREATE TABLE worklog (
-   id bigint(20) UNSIGNED NOT NULL AUTO_INCREMENT,
-   date timestamp(0) NULL DEFAULT CURRENT_TIMESTAMP(0),
-   user_name varchar(20) CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci NULL DEFAULT NULL,
-   file_and_path varchar(1024) CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci NULL,
-   bytes bigint(20) NULL DEFAULT NULL,
-   send_time varchar(9) CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci NULL DEFAULT NULL,
-   client_ip varchar(15) CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci NULL DEFAULT NULL,
-   client_name text CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci NULL,
-   client_command varchar(5) CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci NULL DEFAULT NULL,
-   PRIMARY KEY (id) USING BTREE,
-   UNIQUE INDEX id(id) USING BTREE
-) ENGINE = MyISAM CHARACTER SET = utf8mb4 COLLATE = utf8mb4_general_ci ROW_FORMAT = DYNAMIC;
+   id BIGINT UNSIGNED NOT NULL AUTO_INCREMENT,
+   date TIMESTAMP(0) DEFAULT CURRENT_TIMESTAMP(0),
+   user_name VARCHAR(20) CHARACTER SET utf8mb4 COLLATE utf8mb4_0900_ai_ci DEFAULT NULL,
+   file_and_path VARCHAR(1024) CHARACTER SET utf8mb4 COLLATE utf8mb4_0900_ai_ci DEFAULT NULL,
+   bytes BIGINT UNSIGNED DEFAULT NULL,
+   send_time VARCHAR(9) CHARACTER SET utf8mb4 COLLATE utf8mb4_0900_ai_ci DEFAULT NULL,
+   client_ip VARCHAR(15) CHARACTER SET utf8mb4 COLLATE utf8mb4_0900_ai_ci DEFAULT NULL,
+   client_name TEXT CHARACTER SET utf8mb4 COLLATE utf8mb4_0900_ai_ci DEFAULT NULL,
+   client_command VARCHAR(5) CHARACTER SET utf8mb4 COLLATE utf8mb4_0900_ai_ci DEFAULT NULL,
+   PRIMARY KEY (id),
+   UNIQUE INDEX id (id)
+) ENGINE=InnoDB CHARACTER SET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci ROW_FORMAT=DYNAMIC;
+INSERT INTO `proftpd`.`users` (`username`, `descr`, `password`, `uid`, `gid`, `homedir`, `shell`, `count`)
+VALUES ('test', 'Test user', SHA2('FTPpassword_here', 256), '2000', '2000', '/home/www/ftp', NULL, '0');
+```
+
+
+测试数据库链接：
+
+```sh
+# mysql -u proftpd -p -h localhost proftpd
+
+proftpd@localhost [proftpd]> show data;
+ERROR 1064 (42000): You have an error in your SQL syntax; check the manual that corresponds to your MySQL server version for the right syntax to use near 'data' at line 1
+proftpd@localhost [proftpd]> show databases;
++--------------------+
+| Database           |
++--------------------+
+| information_schema |
+| performance_schema |
+| proftpd            |
++--------------------+
+3 rows in set (0.00 sec)
+
+proftpd@localhost [proftpd]> use proftpd;
+Database changed
+proftpd@localhost [proftpd]> select * from users;
++----------+-----------+------------------------------------------------------------------+------+------+---------------+-------+-------+
+| username | descr     | password                                                         | uid  | gid  | homedir       | shell | count |
++----------+-----------+------------------------------------------------------------------+------+------+---------------+-------+-------+
+| test     | Test user | d1d6930fda5f964acba51ec4c35d0ddb3b36d25bfef59f1120abd2e4f9f140d9 | 2000 | 2000 | /home/www/ftp | NULL  |     0 |
++----------+-----------+------------------------------------------------------------------+------+------+---------------+-------+-------+
+1 row in set (0.00 sec)
 ```
 
 创建一个目录和一个测试 FTP 用户，将创建的目录指定为用户目录：
 
 ```sh
-# mkdir -p /home/www/ftp
-# chown -R proftpd:proftpd /home/www/ftp
-# mysql -u proftpd -p
-INSERT INTO `proftpd`.`users` (`username` , `descr` , `password` , `uid` , `gid` ,`homedir` , `shell` , `count` ) VALUES ('test', 'Test user', ENCRYPT('FTPpassword_here' ) , '2000', '2000', '/home/www/ftp', NULL , '0' );
-
-Query OK, 1 row affected, 1 warning (0.02 sec)
+# mkdir -p /home/proftpd/www
+# chown -R proftpd:proftpd /home/proftpd/www
 ```
 
 ### 服务操作
 
 ```sh
-#  sysrc  proftpd_enable="YES"
+# service proftpd enable # 加入启动项
 
-# service proftpd start #启动服务器
+# service proftpd start # 启动服务器
 
-# service proftpd stop #停止服务
+# service proftpd stop # 停止服务
 
-# service proftpd restart #重启服务
+# service proftpd restart # 重启服务
 ```
 
 ## 连接到 FTP 服务器
