--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -389,9 +389,14 @@ LoadModule mod_sql.c
 LoadModule mod_sql_mysql.c
 LoadModule mod_sql_passwd.c
 
+DefaultRoot ~
+
+# Normally, we want files to be overwriteable.
+AllowOverwrite		on
+
 <Global>
   # 数据库连接
-  SQLConnectInfo proftpd@localhost proftpd proftpd_password
+  SQLConnectInfo proftpd@localhost proftpd 123456
   
   # 关键修正部分
   SQLAuthTypes SHA256
@@ -419,14 +424,13 @@ LoadModule mod_sql_passwd.c
   
   SQLLog RETR,STOR,DELE log_work
   
-  # 目录权限修正
-  <Directory ~/>
-    AllowOverwrite on
-    <Limit ALL>
-      AllowAll
-    </Limit>
-  </Directory>
 </Global>
+```
+
+创建日志路径：
+
+```sh
+# mkdir -p /var/log/proftpd
 ```
 
 >**技巧**
@@ -538,6 +542,9 @@ INSERT INTO `proftpd`.`users` (`username`, `descr`, `password`, `uid`, `gid`, `h
 VALUES ('test', 'Test user', SHA2('FTPpassword_here', 256), '2000', '2000', '/home/www/ftp', NULL, '0');
 ```
 
+创建了：
+- 用户名 `test`
+- 密码 `FTPpassword_here`
 
 测试数据库链接：
 
@@ -570,8 +577,9 @@ proftpd@localhost [proftpd]> select * from users;
 创建一个目录和一个测试 FTP 用户，将创建的目录指定为用户目录：
 
 ```sh
-# mkdir -p /home/proftpd/www
-# chown -R proftpd:proftpd /home/proftpd/www
+# mkdir -p /home/www/ftp
+# chown -R proftpd:proftpd /home/www/ftp
+# chmod -R 775 /home/www/ftp
 ```
 
 ### 服务操作
